# QtMessenger

./: CMakeLists.txt  README.md  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  message.ui  messageinfo.cpp  messageinfo.h  netmanagerdialog.cpp  netmanagerdialog.h  netmanagerdialog.ui  newmanagerdialog.cpp  newmanagerdialog.h  newmanagerdialog.ui  server.cpp  server.h
